--- a/src/components/App/Styles/App.css
+++ b/src/components/App/Styles/App.css
@@ -73,18 +73,19 @@
   position: relative;
 }
 
-.ListingsPage .active-listings .listing .listing-img .listing-status {
+.ListingsPage .active-listings .listing .listing-img .listing-status-banner {
   position: absolute;
   top: 40px;
   left: -50px;
   background: #dedede;
   padding: 0.5rem;
-  width: 200px;
+  width: 210px;
   text-align: center;
   text-transform: uppercase;
   color: #595959;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+  border-bottom: 5px solid #555555;
 }
 
 .ListingsPage .active-listings .listing .listing-img img {
@@ -228,104 +229,114 @@
 }
 
 .GetInTouch {
+  padding-top: 6%;
+  padding-bottom: 2%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   min-height: 100vh;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-*::-webkit-scrollbar {
-  width: 5px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: rgba(92, 92, 92, 0.5);
-  border-radius: 20px;
-  border: transparent;
-}
-
-.App {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-}
-
-nav {
-  z-index: 1;
-  position: fixed;
-  width: 100%;
+.GetInTouch .form-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #aeaeae;
-  border-bottom: 2px solid black;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 50%;
+  color: #6a6a6a;
 }
 
-nav h1 {
-  margin-left: 10%;
+.GetInTouch .form-container h1 {
+  font-size: 2.5rem;
 }
 
-nav ul {
+.GetInTouch .form-container p {
+  font-size: 1.1rem;
+  margin: 1.5rem 0;
+}
+
+.GetInTouch .form-container .form-group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  list-style: none;
-  margin-right: 10%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-nav ul li {
-  margin: 1.5rem;
+.GetInTouch .form-container .form-group label {
+  color: grey;
+  margin: 1rem 0 0.2rem;
+}
+
+.GetInTouch .form-container .form-group .form-input {
+  border: none;
+  border-radius: 2px;
+  padding: 0.5rem;
+  font-size: 1.25rem;
+  color: #434343;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  letter-spacing: 1px;
+}
+
+.GetInTouch .form-container .form-group textarea {
+  resize: none;
+  overflow: auto;
+}
+
+.GetInTouch .form-container .form-btn {
+  padding: 0.7rem;
+  color: white;
+  background: #599a9a;
+  border: none;
+  margin-top: 1rem;
   cursor: pointer;
 }
 
-nav a {
-  -webkit-text-decoration: white;
-          text-decoration: white;
-  color: black;
+.GetInTouch .info {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-top: 5%;
 }
 
-nav a:hover {
-  color: white;
+.GetInTouch .info p {
+  margin: 2rem;
+  font-size: 1.3rem;
+  padding-bottom: 2px;
+  color: #434343;
+  border-bottom: 2px solid rgba(67, 39, 39, 0.482);
 }
 
-@media (max-width: 1200px) {
-  nav h1 {
-    margin-left: 5%;
+@media screen and (max-width: 750px) {
+  .GetInTouch {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  nav ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    list-style: none;
-    margin-right: 2%;
-  }
-  nav ul li {
-    margin: 1.5rem 0.5rem;
-    cursor: pointer;
+  .GetInTouch .info {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
 }
 
@@ -504,32 +515,63 @@ nav a:hover {
           align-items: center;
 }
 
-.three .image-slider {
-  background: grey;
+.three .carousel {
   height: 750px;
-  width: 90%;
+  width: 90vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.three .image-slider div {
-  background: #cecece;
+.three .carousel .carousel-item {
+  width: 90vw;
+  overflow: hidden;
+}
+
+.three .carousel .carousel-item img {
+  height: 725px;
   width: 100%;
-  padding: 2rem;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  margin-bottom: -5px;
+}
+
+@media (max-width: 1000px) {
+  .three .carousel {
+    height: 600px;
+    width: 95vw;
+  }
+  .three .carousel .carousel-item {
+    width: 95vw;
+  }
+  .three .carousel .carousel-item img {
+    height: 575px;
+  }
+}
+
+@media (min-width: 2100px) {
+  .three .carousel {
+    height: 1100px;
+    width: 95vw;
+  }
+  .three .carousel .carousel-item {
+    width: 95vw;
+  }
+  .three .carousel .carousel-item img {
+    height: 1075px;
+  }
 }
 
 .four {
@@ -577,6 +619,22 @@ nav a:hover {
 
 .four .image-tiles .tile:hover {
   background: lightslategrey;
+}
+
+.four .image-tiles .tile a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
 }
 
 @media (max-width: 1200px) {
@@ -664,6 +722,100 @@ nav a:hover {
   }
   .cardfive .info-container {
     margin-bottom: 2rem;
+  }
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(92, 92, 92, 0.5);
+  border-radius: 20px;
+  border: transparent;
+}
+
+.App {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+
+body {
+  background: #eaeaea;
+}
+
+nav {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #aeaeae;
+  border-bottom: 2px solid black;
+}
+
+nav h1 {
+  margin-left: 10%;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  margin-right: 10%;
+}
+
+nav ul li {
+  margin: 1.5rem;
+  cursor: pointer;
+}
+
+nav a {
+  -webkit-text-decoration: white;
+          text-decoration: white;
+  color: black;
+}
+
+nav a:hover {
+  color: white;
+}
+
+@media (max-width: 1200px) {
+  nav h1 {
+    margin-left: 5%;
+  }
+  nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none;
+    margin-right: 2%;
+  }
+  nav ul li {
+    margin: 1.5rem 0.5rem;
+    cursor: pointer;
   }
 }
 /*# sourceMappingURL=App.css.map */
