--- a/src/components/GetInTouch/_getInTouch.scss
+++ b/src/components/GetInTouch/_getInTouch.scss
@@ -1,6 +1,71 @@
 .GetInTouch {
+  padding-top: 6%;
+  padding-bottom: 2%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   min-height: 100vh;
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 50%;
+    color: rgb(106, 106, 106);
+    h1 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.1rem;
+      margin: 1.5rem 0;
+    }
+    .form-group {
+      display: flex;
+      flex-direction: column;
+      label {
+        color: grey;
+        margin: 1rem 0 0.2rem;
+      }
+      .form-input {
+        border: none;
+        border-radius: 2px;
+        padding: 0.5rem;
+        font-size: 1.25rem;
+        color: rgb(67, 67, 67);
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode",
+          Geneva, Verdana, sans-serif;
+        letter-spacing: 1px;
+      }
+      textarea {
+        resize: none;
+        overflow: auto;
+      }
+    }
+    .form-btn {
+      padding: 0.7rem;
+      color: white;
+      background: rgb(89, 154, 154);
+      border: none;
+      margin-top: 1rem;
+      cursor: pointer;
+    }
+  }
+  .info {
+    align-self: flex-start;
+    margin-top: 5%;
+    p {
+      margin: 2rem;
+      font-size: 1.3rem;
+      padding-bottom: 2px;
+      color: rgb(67, 67, 67);
+      border-bottom: 2px solid rgba(67, 39, 39, 0.482);
+    }
+  }
+  @media screen and (max-width: 750px) {
+    flex-direction: column;
+    align-items: center;
+    .info {
+      align-self: center;
+    }
+  }
 }
