--- a/src/components/Listings/_listings.scss
+++ b/src/components/Listings/_listings.scss
@@ -41,17 +41,18 @@
         height: min-content;
         overflow: hidden;
         position: relative;
-        .listing-status {
+        .listing-status-banner {
           position: absolute;
           top: 40px;
           left: -50px;
           background: rgb(222, 222, 222);
           padding: 0.5rem;
-          width: 200px;
+          width: 210px;
           text-align: center;
           text-transform: uppercase;
           color: rgb(89, 89, 89);
           transform: rotate(-45deg);
+          border-bottom: 5px solid rgb(85, 85, 85);
         }
         img {
           width: inherit;
