--- a/src/components/App/Styles/App.scss
+++ b/src/components/App/Styles/App.scss
@@ -5,7 +5,9 @@
 @import "../../Home/home";
 @import "../../NavBar/navbar";
 
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
