--- a/src/components/Community/_community.scss
+++ b/src/components/Community/_community.scss
@@ -2,5 +2,54 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   min-height: 100vh;
+  padding-top: 5%;
+  .map-container {
+    width: 900px;
+    height: min-content;
+    position: relative;
+    img {
+      margin-bottom: -5px;
+      width: inherit;
+      object-fit: cover;
+    }
+    map {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: inherit;
+      z-index: 2;
+      pointer-events: none;
+      #millbrae:hover:after {
+        content: "Millbrae average price: $1,300,000";
+        position: absolute;
+        top: 3%;
+        left: 5%;
+        background: white;
+        padding: 0.5rem;
+        border-radius: 5px;
+      }
+      #burlingame:hover:after {
+        content: "Burlingame average price: $1,550,000";
+        position: absolute;
+        top: 11%;
+        left: 14%;
+        background: white;
+        padding: 0.5rem;
+        border-radius: 5px;
+      }
+    }
+  }
+  @media (max-width: 1000px) {
+    .map-container {
+      width: 650px;
+    }
+  }
+  @media (max-width: 700px) {
+    .map-container {
+      width: 450px;
+    }
+  }
 }
