--- a/src/components/App/Styles/App.css
+++ b/src/components/App/Styles/App.css
@@ -490,6 +490,98 @@
   min-height: 100vh;
 }
 
+#title-J {
+  position: absolute;
+  left: -70vw;
+  opacity: 0;
+  -webkit-animation: animate-J 2s ease-in -0.25s 1 forwards;
+          animation: animate-J 2s ease-in -0.25s 1 forwards;
+}
+
+@-webkit-keyframes animate-J {
+  90% {
+    left: 0;
+    -webkit-transform: rotateZ(20deg);
+            transform: rotateZ(20deg);
+  }
+  95% {
+    left: 0;
+    -webkit-transform: rotateZ(-20deg);
+            transform: rotateZ(-20deg);
+  }
+  100% {
+    left: 0;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+    opacity: 1;
+  }
+}
+
+@keyframes animate-J {
+  90% {
+    left: 0;
+    -webkit-transform: rotateZ(20deg);
+            transform: rotateZ(20deg);
+  }
+  95% {
+    left: 0;
+    -webkit-transform: rotateZ(-20deg);
+            transform: rotateZ(-20deg);
+  }
+  100% {
+    left: 0;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+    opacity: 1;
+  }
+}
+
+#title-D {
+  position: absolute;
+  right: -70vw;
+  opacity: 0;
+  -webkit-animation: animate-D 2s ease-in -0.25s 1 forwards;
+          animation: animate-D 2s ease-in -0.25s 1 forwards;
+}
+
+@-webkit-keyframes animate-D {
+  90% {
+    right: 0;
+    -webkit-transform: rotateZ(-20deg);
+            transform: rotateZ(-20deg);
+  }
+  95% {
+    right: 0;
+    -webkit-transform: rotateZ(20deg);
+            transform: rotateZ(20deg);
+  }
+  100% {
+    right: 0;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+    opacity: 1;
+  }
+}
+
+@keyframes animate-D {
+  90% {
+    right: 0;
+    -webkit-transform: rotateZ(-20deg);
+            transform: rotateZ(-20deg);
+  }
+  95% {
+    right: 0;
+    -webkit-transform: rotateZ(20deg);
+            transform: rotateZ(20deg);
+  }
+  100% {
+    right: 0;
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+    opacity: 1;
+  }
+}
+
 .one {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -507,6 +599,12 @@
   position: relative;
 }
 
+.one h1 {
+  height: 10rem;
+  width: 12rem;
+  position: relative;
+}
+
 .one h1 span {
   font-size: 10rem;
 }
@@ -515,6 +613,27 @@
   margin-top: 10px;
   color: grey;
   letter-spacing: 3px;
+  -webkit-animation: fade 0.75s ease 1.75s 1 forwards;
+          animation: fade 0.75s ease 1.75s 1 forwards;
+  opacity: 0%;
+}
+
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
 
 .one .arrow {
