--- a/src/components/NavBar/_navbar.scss
+++ b/src/components/NavBar/_navbar.scss
@@ -2,13 +2,18 @@ nav {
   z-index: 1;
   position: fixed;
   width: 100%;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: rgb(174, 174, 174);
   border-bottom: 2px solid black;
+  top: -60px;
+  opacity: 0;
+  transition: all 0.25s ease;
   h1 {
     margin-left: 10%;
+    font-size: 3rem;
   }
   ul {
     display: flex;
